other_imgs+added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Preview Design</title>
+    <style>
+        #main-product-img{
+            width: 400px;
+            height: 400px;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
-    
+  <img src="1.png" id="main-product-img"/>
+  <div class="product-img-container">
+    <img src="1.png" class="product-img"/>
+    <img src="2.png" class="product-img"/>
+    <img src="3.jpg" class="product-img"/>
+    <img src="4.jpg" class="product-img"/>
+    <img src="5.jpg" class="product-img"/>
+    <img src="6.jpg" class="product-img"/>
+  </div>  
 </body>
-</html>.
+</html>
