--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             width: 400px;
             height: 400px;
             object-fit: cover;
+            border:1px solid black;
+            border-radius: 20px;
+            box-shadow: 0px 0px 5px 0px rgb(94, 90, 90);
+            display: block;
+            margin: 20px auto;
         }
     </style>
 </head>
