style_added_to_product_img&container

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
             display: block;
             margin: 20px auto;
         }
+        .product-img{
+          width: 70px;
+          height: 70px;
+          object-fit: cover;
+          border: 1px solid black;
+          border-radius: 10px;
+          margin: 5px;
+          cursor: pointer;
+        }
+        .product-img-container{
+          display: flex;
+          justify-content: center;
+        }
     </style>
 </head>
 <body>
