--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Preview Design</title>
     <style>
+      .main-conatiner{
+        display: flex;
+        flex-direction: row;
+        
+      }
         #main-product-img{
             width: 400px;
             height: 400px;
@@ -13,7 +18,7 @@
             border-radius: 20px;
             box-shadow: 0px 0px 5px 0px rgb(94, 90, 90);
             display: block;
-            margin: 20px auto;
+            margin: 38px 50px ;
         }
         .product-img{
           width: 70px;
@@ -21,25 +26,43 @@
           object-fit: cover;
           border: 1px solid black;
           border-radius: 10px;
-          margin: 5px;
+          margin-left: 10px;
+          margin-top: 12px;
           cursor: pointer;
+        }
+        .product-img:hover{
+          border: 2px solid palevioletred;
+          box-shadow: 0px 0px 4px plum;
         }
         .product-img-container{
           display: flex;
-          justify-content: center;
+          flex-direction: column;
+          margin-left: 450px;
+        }
+        .mobile-name{
+          text-align: center;
+          font-size: 15px;
+          font-family: 'Courier New', Courier, monospace;
+        color: black;
+        font-weight: 700;
         }
     </style>
 </head>
 <body>
+  <div class="main-conatiner">
+    <div class="product-img-container">
+      <img src="1.png" class="product-img" onclick=" ChangeImage(1)"/>
+      <img src="2.png" class="product-img" onclick=" ChangeImage(2)"/>
+      <img src="3.jpg" class="product-img" onclick=" ChangeImage(3)"/>
+      <img src="4.jpg" class="product-img" onclick=" ChangeImage(4)"/>
+      <img src="5.jpg" class="product-img" onclick=" ChangeImage(5)"/>
+      <img src="6.jpg" class="product-img" onclick=" ChangeImage(6)"/>
+    </div> 
   <img src="1.png" id="main-product-img"/>
-  <div class="product-img-container">
-    <img src="1.png" class="product-img" onclick=" ChangeImage(1)"/>
-    <img src="2.png" class="product-img" onclick=" ChangeImage(2)"/>
-    <img src="3.jpg" class="product-img" onclick=" ChangeImage(3)"/>
-    <img src="4.jpg" class="product-img" onclick=" ChangeImage(4)"/>
-    <img src="5.jpg" class="product-img" onclick=" ChangeImage(5)"/>
-    <img src="6.jpg" class="product-img" onclick=" ChangeImage(6)"/>
-  </div>  
+</div>
+<div>
+  <p class="mobile-name"> Samsung Galaxy A35 5G (Awesome Iceblue, 8GB RAM, 128GB Storage) |<br/> Premium Glass Back | 50 MP Main Camera (OIS) | Nightography |<br/> IP67 | Corning Gorilla Glass Victus+ | sAMOLED with Vision Booster</p>
+</div> 
   <script>
     function ChangeImage(num){
    const mainImage=document.getElementById('main-product-img');
